# Framework_GARMF_Mpox

./: .gitignore  Framework_runner.ipynb  README.md  framework.ipynb
mpox_repro_framework/: README.md  pyproject.toml  requirements.txt
mpox_repro_framework/docs/: README.md
mpox_repro_framework/reports/: all_latest_runs.csv  baseline_vs_genai_comparison.csv  comparison_summary.md  comparison_table.csv  latest_manifests_20250904_094353.json  latest_manifests_20250904_115359.json  latest_manifests_20250904_122246.json  latest_runs_with_reproscore.csv  section_4_2_5.md  section_4_2_5_results.md
mpox_repro_framework/reports/cards/: Farzipour_2023.md  farzipour_2023_baseline.md  farzipour_2023_genai.md  imaging_baseline.md  imaging_genai.md  imaging_vit_baseline.md  imaging_vit_genai.md
mpox_repro_framework/runs/1756970865/: manifest.json
mpox_repro_framework/runs/1756970867/: manifest.json
mpox_repro_framework/runs/1756971830/: manifest.json
mpox_repro_framework/runs/1756971832/: manifest.json
mpox_repro_framework/runs/1756979626/: manifest.json
mpox_repro_framework/runs/1756979627/: manifest.json
mpox_repro_framework/runs/1756979636/: manifest.json
mpox_repro_framework/runs/1756979637/: manifest.json
mpox_repro_framework/runs/1756980127/: manifest.json
mpox_repro_framework/runs/1756980128/: manifest.json
mpox_repro_framework/runs/1756981262/: manifest.json
mpox_repro_framework/runs/1756981264/: manifest.json
mpox_repro_framework/runs/1756981362/: manifest.json
mpox_repro_framework/tests/: test_determinism.py
(+46 files in other folders)
