[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cbe-repro"
version = "0.1.0"
description = "Reproducible mpox experiments"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "You" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
